C* tuning